api/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nsh-api
  namespace: nsh
spec:
  replicas: 1
  selector:
    matchLabels:
      component: nsh-api
  template:
    metadata:
      labels:
        component: nsh-api
    spec:
      containers:
        - name: nsh-api
          image: ghcr.io/nikodem-wrona/nsh/nsh-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
