api/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nsh-api-cluster-ip
  namespace: nsh
spec:
  type: ClusterIP
  selector:
    component: nsh-api
  ports:
    - port: 3003
      targetPort: 3003
