api/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nsh-api-ingress-service
  namespace: nsh
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: $1
spec:
  tls:
    - hosts:
        - nikodemwrona.dev
      secretName: nikodemwrona.dev
  rules:
    - host: nikodemwrona.dev
      http:
        paths:
          - path: /nsh/api?(.*)
            pathType: Exact
            backend:
              service:
                name: nsh-api-cluster-ip
                port:
                  number: 3003
